# Member-Bot-Commands

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  docker-package.json  package.json  pnpm-lock.yaml  push.sh  pyproject.toml  railway.toml  replit.md  start.sh  tsconfig.bot.json
.agents/: agent_assets_metadata.toml
.github/workflows/: railway-deploy.yml
artifacts/api-server/: build.mjs
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts  index.ts
artifacts/dashboard/: index.html  vite.config.ts
artifacts/dashboard/.replit-artifact/: artifact.toml
artifacts/dashboard/src/: App.tsx  index.css
artifacts/data/: auths.txt  channel_locks.json  daily_restock.json  extra_owners.json  role_limits.json
attached_assets/: Pasted--Gecko-Opt-in-Announcement-Bot-from-future-import-annot_1777249031782.txt
docs/: incoming_tokens.example.txt  index.html
docs/auth/: callback.html
gecko/: __init__.py  __main__.py  announcements.py  config.py  server.py  storage.py  tokens.py
gecko/bot/: __init__.py  announcements_view.py  auth.py  client.py  control_panel.py  embeds.py  restock.py
scripts/: post-merge.sh
src/: botStatus.ts  config.ts  index.ts  landing.ts  oauth.ts  server.ts
src/bot/: autoping.ts  client.ts  commands.ts  controlPanel.ts  embeds.ts  loops.ts  permissions.ts  prefix.ts  restock.ts  session.ts  subscribeView.ts
src/storage/: allowedGuilds.ts  autoping.ts  blacklist.ts  bulkTokenFile.ts  files.ts  locks.ts  owners.ts  redirectConfig.ts  roles.ts  schedules.ts  subscribers.ts  tokens.ts
(+17 files in other folders)
